--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "app",
+  "name": "api",
   "version": "1.0.0",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -13,3 +14,4 @@
     "express": "^4.21.2"
   }
 }
+
